Adding and listing campaigns features
